[package]
name = "heapix"
version = "0.2.0"
edition = "2021"
authors = ["PlotoZypresse"]
description = "A library providing heap data structures"
repository = "https://github.com/PlotoZypresse/heapify"
homepage = "https://github.com/PlotoZypresse/heapify"
license = "MIT"
keywords = ["heap", "priority-queue", "datastructure"]
categories = ["data-structures"]
readme = "README.md"


[dependencies]
