[package]
name = "heapix"
version = "0.4.8"
edition = "2021"
authors = ["PlotoZypresse"]
description = "A library providing heap data structures"
repository = "https://github.com/PlotoZypresse/heapify"
homepage = "https://github.com/PlotoZypresse/heapify"
license = "MIT"
keywords = ["heap", "priority-queue", "datastructure"]
categories = ["data-structures"]
readme = "README.md"


[dependencies]
